# azure_function_examples

./: .pre-commit-config.yaml  .yamllint  README.md  pyproject.toml  requirements.txt
.azuredevops/: deploy-azure-function.yaml  deploy-infrastructure.yaml
ops/: providers.tf  stack.tf  terraform.tfvars  variables.tf
v1/http_trigger/: function.json  http_trigger.py
v2/: function_app.py
v2/copy_blobs/: copy_blobs.py
v2/delta_table/: delta_table.py
v2/delta_table_mi/: delta_table_mi.py
v2/do_something_blob/: do_something_blob.py
v2/http_trigger/: http_trigger.py
v2/http_trigger_async/: http_trigger_async.py
v2/http_trigger_async_exec/: http_trigger_async_execution.py
v2/simple_blob_trigger/: simple_blob_trigger.py
v2/simple_blob_trigger_managed_identity/: simple_blob_trigger_managed_identity.py
v2/write_delta_table/: write_delta_table.py
v2/write_delta_table_managed_identity/: write_delta_table_managed_identity.py
